Added Counter Module

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,6 +19,14 @@
           >products</a
         >
       </li>
+      <li class="nav-item">
+        <a
+          class="nav-link"
+          routerLink="/counter"
+          routerLinkActive="active-link"
+          >Counter</a
+        >
+      </li>
     </ul>
   </nav>
 </header>
